Z-index issues

--- a/css/gv.css
+++ b/css/gv.css
@@ -27,6 +27,7 @@ h2 {
 }
 
 h3 {
+    margin: 0;
     font-family: Bookmania, sans-serif;
     font-size: 3rem;
 }
@@ -34,7 +35,7 @@ h3 {
 p {
     max-width: 60ch;
     margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.25rem;
     font-size: 1.125rem;
     line-height: 1.4;
 }
@@ -236,7 +237,7 @@ figcaption {
     top: 0%;
     right: 0%;
     bottom: auto;
-    z-index: 15;
+    z-index: 25;
     display: -ms-grid;
     display: grid;
     height: 5rem;
@@ -349,7 +350,7 @@ figcaption {
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
-    z-index: 10;
+    z-index: 15;
     height: 5rem;
     background-color: #352227;
 }
